# cpplox-mirror

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
dependencies/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
src/src/: CMakeLists.txt
src/src/Bytecode/: ByteCodeRunner.cpp  Compiler.cpp  VM.cpp
src/src/Treewalk/: AstGenerator.cpp  ErrorReporter.cpp  Literal.cpp  Resolver.cpp  Scanner.cpp
test/: CMakeLists.txt  TestAstPrinter.cpp  TestGC.cpp  TestInterpreter.cpp  TestScanner.cpp  TestStringPool.cpp  TestVM.cpp  unexpected_character.lox
test/adhoc/: fib.lox  func_assignment.lox
test/assignment/: infix_operator.lox  undefined.lox
test/benchmark/: equality.lox
test/call/: bool.lox  nil.lox  num.lox  string.lox
test/closure/: assign_to_closure.lox  assign_to_shadowed_later.lox
test/for/: fun_in_body.lox  statement_condition.lox  statement_increment.lox  statement_initializer.lox
test/function/: body_must_be_block.lox  extra_arguments.lox  missing_arguments.lox  missing_comma_in_parameters.lox  print.lox  too_many_arguments.lox  too_many_parameters.lox
test/if/: fun_in_else.lox  fun_in_then.lox
test/limit/: loop_too_large.lox  no_reuse_constants.lox  stack_overflow.lox  too_many_constants.lox  too_many_locals.lox  too_many_upvalues.lox
test/method/: too_many_arguments.lox
test/number/: leading_dot.lox
test/operator/: add_bool_nil.lox  add_nil_nil.lox  add_num_nil.lox  add_string_nil.lox  divide_nonnum_num.lox  greater_nonnum_num.lox  greater_num_nonnum.lox  greater_or_equal_nonnum_num.lox  greater_or_equal_num_nonnum.lox  less_nonnum_num.lox  less_or_equal_nonnum_num.lox  multiply_nonnum_num.lox  subtract_num_nonnum.lox
test/print/: missing_argument.lox
test/return/: at_top_level.lox
test/string/: literals.lox
test/test/: ScannerTest.cpp  TestInterpreter.cpp  TestParser.cpp
test/test/adhoc/: for-return-closure.lox  fun-call.lox  nested_block.lox  scope.lox
test/test/assignment/: grouping.lox  prefix_operator.lox
test/test/comments/: only_line_comment.lox
test/test/for/: syntax.lox  var_in_body.lox
test/test/function/: add.lox  body_must_be_block.lox  extra_arguments.lox  local_mutual_recursion.lox  local_recursion.lox  missing_comma_in_parameters.lox  too_many_arguments.lox  too_many_parameters.lox
test/test/if/: else.lox  var_in_else.lox  var_in_then.lox
test/test/number/: trailing_dot.lox
test/test/operator/: add_bool_num.lox  add_bool_string.lox  divide_num_nonnum.lox  less_num_nonnum.lox  less_or_equal_num_nonnum.lox  multiply_num_nonnum.lox  negate_nonnum.lox  subtract_nonnum_num.lox
test/test/string/: error_after_multiline.lox  unterminated.lox
test/test/variable/: undefined_global.lox  undefined_local.lox  use_false_as_var.lox  (+1 more)
test/variable/: collide_with_parameter.lox  duplicate_local.lox  duplicate_parameter.lox  use_local_in_initializer.lox
(+62 files in other folders)
